--- a/requirements.txt
+++ b/requirements.txt
@@ -8,12 +8,20 @@ click-didyoumean==0.3.0
 click-plugins==1.1.1
 click-repl==0.3.0
 colorama==0.4.6
+dj-rest-auth==6.0.0
 Django==4.2.9
 django-bootstrap-v5==1.0.11
+django-debug-toolbar==4.3.0
+django-environ==0.11.2
 django-taggit==5.0.1
+djangorestframework==3.15.1
+gunicorn==21.2.0
 kombu==5.3.4
+packaging==23.2
 Pillow==10.1.0
 prompt-toolkit==3.0.43
+psycopg2==2.9.9
+psycopg2-binary==2.9.9
 python-dateutil==2.8.2
 redis==5.0.1
 six==1.16.0
@@ -22,7 +30,3 @@ sqlparse==0.4.4
 tzdata==2023.3
 vine==5.1.0
 wcwidth==0.2.13
-django-environ==0.11.2
-psycopg2-binary==2.9.9
-djangorestframework~=3.15
-django-debug-toolbar~=4.3
