--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
 amqp==5.2.0
 asgiref==3.7.2
 beautifulsoup4==4.12.2
-billiard==4.2.0
-celery==5.3.6
+celery==5.5.2
 click==8.1.7
 click-didyoumean==0.3.0
 click-plugins==1.1.1
@@ -16,16 +15,15 @@ django-environ==0.11.2
 django-taggit==5.0.1
 djangorestframework==3.15.1
 gunicorn==21.2.0
-kombu==5.3.4
 packaging==23.2
-Pillow==10.1.0
+Pillow==11.2.1
 prompt-toolkit==3.0.43
-psycopg2-binary==2.9.9
+psycopg2-binary==2.9.10
 python-dateutil==2.8.2
 redis==5.0.1
 six==1.16.0
 soupsieve==2.5
 sqlparse==0.4.4
-tzdata==2023.3
 vine==5.1.0
 wcwidth==0.2.13
+drf-spectacular==0.28.0
